# Bridge-Classroom

./: .env.example  .env.production  .gitignore  CLAUDE.md  dot-com-vs-dot-org.md  index.html  package-lock.json  package.json  site-analytics.md  vite.config.js  vitest.config.js  wrangler.jsonc
bridge-classroom-api/: .env.example  .gitignore  Cargo.toml  README.md
bridge-classroom-api/scripts/: backup-db.sh  classroom-sessions.json  export-classroom-attendance.py
bridge-classroom-api/seed_data/: 21_intermediate_card.json
bridge-classroom-api/src/: config.rs  db.rs  main.rs  obs_crypto.rs  student_summary.rs
bridge-classroom-api/src/models/: assignment.rs  classroom.rs  convention_card.rs  exercise.rs  grant.rs  mod.rs  observation.rs  user.rs  viewer.rs
bridge-classroom-api/src/routes/: admin.rs  announcements.rs  assignments.rs  auth.rs  board_status.rs  classrooms.rs  convention_cards.rs  diagnostics.rs  exercises.rs  grants.rs  keys.rs  lesson_mastery.rs  me.rs  merge.rs  mod.rs  observations.rs  recovery.rs  student_summaries.rs  table_sessions.rs  table_tickets.rs  teacher_dashboard.rs  users.rs  viewers.rs
docs/: .gitignore  CARD_TAXONOMY_MAPPING.md  CONVENTION_CARDS.md  ENCRYPTION_SHARING_REVISED.md  IMPLEMENTATION_PLAN.md  PWA_RECOVERY_PICKUP_PLAN.md  REQUIREMENTS.md  about.html  bbo-scenarios.html  bidding-practice.html  classrooms.html  cloudflare-setup.md  club-game-analysis.html  deal-library.html  defender-playout-handoff.md  game-analysis.html  hand-curator.html  index-preview.html  index.html  lesson-materials.html  new_tables_for_classrooms.sql  privacy.html  robots.txt  site.js  sitemap.xml  solo-practice.html  styles.css  teacher-utilities.html  wrangler.jsonc
documentation/: ACHIEVEMENTS.md  BBO_CHROME_EXTENSION.md  CLAUDE_CODE_QUICKSTART.md  CONVENTION_CARDS.md  CORRECTNESS_AND_MASTERY.md  DATA_SCHEMAS.md  ENCRYPTION_AND_SHARING_DESIGN.md  GUI_TAXONOMY.md  PARTNERSHIP_MATRIX_PDF_IMPORT.md  PROJECT_OVERVIEW.md  README.md  TEACHER_FEATURES_SPEC.md  cloudflare-setup.md  developer-guide.md  table-console-roadmap.md
mockups/: bridge_classroom_about_page.html  styles.css  (+9 more)
(+363 files in other folders)
