[package]
name = "bridge-classroom-api"
version = "0.1.0"
edition = "2021"
description = "Backend API for Bridge Classroom - stores encrypted practice observations"
authors = ["Rick Wilson"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP utilities
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
# Testing
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
